Fixed issues in duplicate column in db.

--- a/app/views/posts/_feed.html.erb
+++ b/app/views/posts/_feed.html.erb
@@ -27,7 +27,7 @@
   				<small><%= post.user.username %></small><br/>
   				<p><%= post.post %></p>
   			</div>
-        <% if user_signed_in? && current_user.id == post.user_id %>
+        <% if user_signed_in? && current_user.id == post.user_ids %>
   			<nav class="level">
   				<div class="level-left is-mobile">
   					<%= link_to post, class: "level-item" do %>
