--- a/app/views/posts/_feed.html.erb
+++ b/app/views/posts/_feed.html.erb
@@ -27,21 +27,21 @@
   				<small><%= post.user.username %></small><br/>
   				<p><%= post.post %></p>
   			</div>
-        <% if user_signed_in? && current_user.id == post.user_ids %>
-  			<nav class="level">
-  				<div class="level-left is-mobile">
-  					<%= link_to post, class: "level-item" do %>
-  					  <span class="icon"><i class="fa fa-link" aria-hidden="true"></i></span>
-  					<% end %>
-  					<%= link_to edit_post_path(post), class: "level-item" do %>
-  					  <span class="icon"><i class="fa fa-pencil" aria-hidden="true"></i></span>
-  					<% end %>
-  					<%= link_to post, method: :delete, data: { confirm: "Are you sure you want to delete this post?" } do %>
-  							<span class="icon"><i class="fa fa-trash-o" aria-hidden="true"></i></span>
-  					<% end %>
-  				</div>
-  			</nav>
-        <% end %>
+			<% if user_signed_in? && current_user.id == post.user_id %>
+				<nav class="level">
+					<div class="level-left is-mobile">
+						<%= link_to post, class: "level-item" do %>
+							<span class="icon"><i class="fa fa-link" aria-hidden="true"></i></span>
+						<% end %>
+						<%= link_to edit_post_path(post), class: "level-item" do %>
+							<span class="icon"><i class="fa fa-pencil" aria-hidden="true"></i></span>
+						<% end %>
+						<%= link_to post, method: :delete, data: { confirm: "Are you sure you want to delete this post?" } do %>
+								<span class="icon"><i class="fa fa-trash-o" aria-hidden="true"></i></span>
+						<% end %>
+					</div>
+				</nav>
+			<% end %>
   		</div>
   	</article>
   </div>
