--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,22 +38,20 @@
       <div id="navbarExample" class="navbar-menu">
         <div class="navbar-end">
           <div class="field is-grouped">
-            <p class="control">
-              <%= link_to 'New Post', new_post_path, class: "button is-info is-inverted" %>
-            </p>
+            
             <% if user_signed_in? %>
               <p class="control">
-                <%= link_to current_user.name, edit_user_registration_path, class: "button is-info" %>
+                <%= link_to current_user.name, edit_user_registration_path, class: "button is-dark" %>
               </p>
               <p class="">
-                <%= link_to "Logout", destroy_user_session_path, method: :delete, class:"button is-info" %>
+                <%= link_to "Logout", destroy_user_session_path, method: :delete, class:"button is-dark" %>
               </p>
             <% else %>
               <p class="control">
-              <%= link_to 'Sign In', new_user_session_path, class: "button is-info" %> 
+              <%= link_to 'Sign In', new_user_session_path, class: "button is-dark" %> 
               </p>
               <p class="control">
-              <%= link_to 'Sign Up', new_user_registration_path, class: "button is-info" %> 
+              <%= link_to 'Sign Up', new_user_registration_path, class: "button is-dark" %> 
               </p>
             <% end %>
           </div>
