add rules to display name if signed in

--- a/app/views/posts/_feed.html.erb
+++ b/app/views/posts/_feed.html.erb
@@ -15,7 +15,8 @@
 
 <% @posts.each do | post | %>
   <div class="box">
-  	<article class="media">
+	  <article class="media">
+	  <% if user_signed_in? %>
   		<div class="media-left">
   			<figure class="image is-64x64">
   				<%= gravatar_image_tag(post.user.email, size: 64, alt: post.user.name) %>
@@ -24,7 +25,8 @@
   		<div class="media-content">
   			<div class="content">
   				<strong><%= post.user.name %></strong><br />
-  				<small><%= post.user.username %></small><br/>
+				  <small><%= post.user.username %></small><br/>
+		<% end %>
   				<p><%= post.post %></p>
   			</div>
 			<% if user_signed_in? && current_user.id == post.user_id %>
