Edit readme file.

--- a/app/views/posts/_feed.html.erb
+++ b/app/views/posts/_feed.html.erb
@@ -12,11 +12,10 @@
 	</article>
   <% end %>
 
-
 <% @posts.each do | post | %>
+	<% if user_signed_in? && current_user.id == post.user_id %>
   <div class="box">
 	  <article class="media">
-	  <% if user_signed_in? %>
   		<div class="media-left">
   			<figure class="image is-64x64">
   				<%= gravatar_image_tag(post.user.email, size: 64, alt: post.user.name) %>
@@ -25,11 +24,9 @@
   		<div class="media-content">
   			<div class="content">
   				<strong><%= post.user.name %></strong><br />
-				  <small><%= post.user.username %></small><br/>
-		<% end %>
-  				<p><%= post.post %></p>
+				<small><%= post.user.username %></small><br/>
+  				<p class="column"><%= post.post %></p>
   			</div>
-			<% if user_signed_in? && current_user.id == post.user_id %>
 				<nav class="level">
 					<div class="level-left is-mobile">
 						<%= link_to post, class: "level-item" do %>
