fix databases migrations

--- a/app/views/posts/_feed.html.erb
+++ b/app/views/posts/_feed.html.erb
@@ -25,7 +25,7 @@
   			<div class="content">
   				<strong><%= post.user.name %></strong><br />
 				<small><%= post.user.username %></small><br/>
-  				<p class="column"><%= post.post %></p>
+  				 <p class="title is-4"><%= post.title, post %></p>
   			</div>
 				<nav class="level">
 					<div class="level-left is-mobile">
