--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,7 +13,7 @@
 			<div class="column is-half">
 				<h1 class="title">Post:</h1>
 					
-          <%= @post.post %>
+        <p class="title is-4"><%= post.title, post %></p>
 			</div>
 		</div>
       <div class="field is-grouped">
