--- a/app/views/posts/_feed.html.erb
+++ b/app/views/posts/_feed.html.erb
@@ -7,42 +7,48 @@
 			</p>
 		</figure>
 		<div class="media-content">
-			 <%= render 'posts/form' %>
+			 <%= render 'posts/form1' %>
 		</div>
 	</article>
   <% end %>
 
 <% @posts.each do | post | %>
 	<% if user_signed_in? && current_user.id == post.user_id %>
-  <div class="box">
-	  <article class="media">
-  		<div class="media-left">
-  			<figure class="image is-64x64">
-  				<%= gravatar_image_tag(post.user.email, size: 64, alt: post.user.name) %>
-  			</figure>
-  		</div>
-  		<div class="media-content">
-  			<div class="content">
-  				<strong><%= post.user.name %></strong><br />
-				<small><%= post.user.username %></small><br/>
-  				 <p class="title is-4"><%= post.title, post %></p>
-  			</div>
-				<nav class="level">
-					<div class="level-left is-mobile">
-						<%= link_to post, class: "level-item" do %>
-							<span class="icon"><i class="fa fa-link" aria-hidden="true"></i></span>
-						<% end %>
-						<%= link_to edit_post_path(post), class: "level-item" do %>
-							<span class="icon"><i class="fa fa-pencil" aria-hidden="true"></i></span>
-						<% end %>
-						<%= link_to post, method: :delete, data: { confirm: "Are you sure you want to delete this post?" } do %>
-								<span class="icon"><i class="fa fa-trash-o" aria-hidden="true"></i></span>
-						<% end %>
+		<div class="box">
+			<article class="media">
+				<div class="media-left">
+					<figure class="image is-64x64">
+						<%= gravatar_image_tag(post.user.email, size: 64, alt: post.user.name) %>
+					</figure>
+				</div>
+				<div class="media-content">
+					<div class="content">
+						<strong><%= post.user.name %></strong><br />
+						<small><%= post.user.username %></small><br/>
+						<hr>
+						<div class="content">
+							<p class="title is-4"> <%= link_to post.title, post %> </p>
+							<p class="is-6"> <%= post.body %> </p>
+						</div>
 					</div>
-				</nav>
-			<% end %>
+					<nav class="level">
+						<div class="level-left is-mobile">
+							<%= link_to post, class: "level-item" do %>
+								<span class="icon"><i class="fa fa-link" aria-hidden="true"></i></span>
+							<% end %>
+							<%= link_to edit_post_path(post), class: "level-item" do %>
+								<span class="icon"><i class="fa fa-pencil" aria-hidden="true"></i></span>
+							<% end %>
+							<%= link_to post, method: :delete, data: { confirm: "Are you sure you want to delete this post?" } do %>
+									<span class="icon"><i class="fa fa-trash-o" aria-hidden="true"></i></span>
+							<% end %>
+						</div>
+					</nav>
+				</div>
+			</article>			
   		</div>
-  	</article>
-  </div>
+	<% end %>
 <% end %>
+	
 </div>
+
