--- a/app/views/posts/_feed.html.erb
+++ b/app/views/posts/_feed.html.erb
@@ -1,5 +1,6 @@
 <div class="column is-half">
   <% if user_signed_in? %>
+  <h2 class=title>Create a new Post</h2><br/>
 	<article class="media box">
 		<figure class="media-left">
 			<p class="image is-64x64">
